@@ -2,7 +2,7 @@ AC_INIT(zero-install.c)
 AM_INIT_AUTOMAKE(zero-install, 0.1.24)
 AC_PROG_MAKE_SET
 
-LAZYFS_VERSION=0d1d23
+LAZYFS_VERSION=0d1d24
 AC_SUBST(LAZYFS_VERSION)
 
 AC_PROG_CC
